# OpenKB

./: .env.example  .gitignore  pyproject.toml
openkb/: cache.py  cli.py  converter.py
openkb/agent/: compiler.py
openkb/service/: __init__.py  api.py  feishu.py  jobs.py  manager.py  runtime.py
tests/: test_add_command.py
